--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>BALLLs</title>
+    <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
 <h1>balls</h1>
