--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>BALLLs</title>
+    <title>Jackson loves BALLS</title>
     <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
