--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>noah loves BALLS</title>
+    <title>HI</title>
     <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
-<h1>ball</h1>
+<h1>BALLS</h1>
 
     
   </body>
