--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>HI</title>
+    <title>Showdown</title>
     <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
 <h1>BALLS</h1>
-
+<h1>jackson is a ball lover</h1>
     
   </body>
 </html>
+ 
