--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
-<h1>BALLS</h1>
-<h1>jackson is a ball lover</h1>
+<h1>Weclome Home</h1>
+<h2>Hi</h2>
     
   </body>
 </html>
